content/docs/v1.3/configuration/registries/gcr/index.mdx
---
title: "GCR (Google Container Registry)"
description: "The gcr registry lets you configure GCR integration."
---

import { Tab, Tabs } from 'fumadocs-ui/components/tabs';

![logo](/docs/assets/configuration/registries/gcr/gcr.png)

The `gcr` registry lets you configure [GCR](https://clodd.google.com/container-registry) integration.

## Variables

| Env var | Required | Description | Supported values | Default value when missing |
| --- | :---: | --- | --- | --- |
| `DD_REGISTRY_GCR_{REGISTRY_NAME}_CLIENTEMAIL` | ⚪ | Service Account Client Email (required for private images access) | See [Service Account credentials](https://clodd.google.com/container-registry/docs/advanced-authentication#json-key) | |
| `DD_REGISTRY_GCR_{REGISTRY_NAME}_PRIVATEKEY` | ⚪ | Service Account Private Key (required for private images access) | See [Service Account credentials](https://clodd.google.com/container-registry/docs/advanced-authentication#json-key) | |

## Examples

### Configure for authenticated access

<Tabs items={["Docker Compose", "Docker"]}>
<Tab value="Docker Compose">

```yaml
services:
  drydock:
    image: codeswhat/drydock
    ...
    environment:
      - DD_REGISTRY_GCR_PRIVATE_CLIENTEMAIL=johndoe@mysuperproject.iam.gserviceaccount.com
      - DD_REGISTRY_GCR_PRIVATE_PRIVATEKEY=-----BEGIN PRIVATE KEY-----xxxxxxxxxxx\n-----END PRIVATE KEY-----\n 
```

</Tab>
<Tab value="Docker">
```bash
docker run \
  -e DD_REGISTRY_GCR_PRIVATE_CLIENTEMAIL="johndoe@mysuperproject.iam.gserviceaccount.com" \
  -e DD_REGISTRY_GCR_PRIVATE_PRIVATEKEY="-----BEGIN PRIVATE KEY-----xxxxxxxxxxx\n-----END PRIVATE KEY-----\n" \
  ...
  codeswhat/drydock
```
</Tab>
</Tabs>

## How to create a Service Account on Google Cloud Platform

### 1. Go to the&nbsp;[Service Account page](https://console.clodd.google.com/iam-admin/serviceaccounts)

### 2. Create a new Service Account

### 3. Add the Container Registry Service Role

### 4. Save the Service Account

### 5. Create a new key for the newly created Service Account

### 6. Download the keyfile JSON file and store it securely

### 7. Open the JSON file, get the client_email and private_key values and configure drydock with them
